# prowl

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.claude/: settings.json
docs/: features.md
docs/superpowers/plans/: 2026-04-06-prowl-v0.1.md
docs/superpowers/specs/: 2026-04-06-prowl-design.md
src/: actions.rs  app.rs  config.rs  default_config.toml  lib.rs  main.rs
src/search/: mod.rs  query.rs  walker.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
src/ui/: keybind_bar.rs  layout.rs  mod.rs  preview.rs  results.rs  search_input.rs
tests/: actions_test.rs  config_test.rs  integration_test.rs  query_test.rs  shell_test.rs  walker_test.rs
