[package]
name = "prowl"
version = "0.1.0"
edition = "2021"
description = "A fast, single-binary TUI for navigating, previewing, and opening anything in your filesystem"
license = "MIT"
repository = "https://github.com/RyanJKS/prowl"

[dependencies]
anyhow = "1"
arboard = "3"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ignore = "0.4"
nucleo = "0.5"
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
shell-escape = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "fs"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace]
